--- a/JSONiTUNES/Base.lproj/Main.storyboard
+++ b/JSONiTUNES/Base.lproj/Main.storyboard
@@ -17,20 +17,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cuk-wg-tfr">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="cuk-wg-tfr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="02K-OH-fCh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cuk-wg-tfr" secondAttribute="bottom" id="9cR-kN-0Rn"/>
-                            <constraint firstItem="cuk-wg-tfr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Bi9-ae-XbA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cuk-wg-tfr" secondAttribute="trailing" id="xhN-ur-sGZ"/>
+                            <constraint firstAttribute="bottom" secondItem="cuk-wg-tfr" secondAttribute="bottom" id="ZHN-F4-IE9"/>
+                            <constraint firstItem="cuk-wg-tfr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aR0-jM-65L"/>
+                            <constraint firstItem="cuk-wg-tfr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="v9k-sK-7N7"/>
+                            <constraint firstItem="cuk-wg-tfr" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xNo-XM-88i"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="z49-Aj-99h"/>
+                    <connections>
+                        <outlet property="table" destination="cuk-wg-tfr" id="l7a-yj-GBq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
